<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/servercat_title">
  <ListPreference
    android:key="server"
    android:title="@string/server_title"
    android:summary="@string/server_summary"
    android:entries="@array/server_entries_list"
    android:entryValues="@array/server_values_list"
    android:dialogTitle="@string/server_dialog_title_prefs"
    />
  <EditTextPreference
    android:key="otherserver"
    android:title="@string/otherserver_title"
    android:summary="@string/otherserver_summary"
    />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/othercat_title">
  <CheckBoxPreference
    android:key="save_psw"
    android:title="@string/save_psw_title"
    android:summary="@string/save_psw_summary"
    android:defaultValue="true"
    />
  <CheckBoxPreference
    android:key="useoisafe"
    android:title="@string/use_oisafe_title"
    android:summary="@string/use_oisafe_summary"
    android:defaultValue="false"
    />
  <CheckBoxPreference
    android:key="autologin"
    android:title="@string/autologin_title"
    android:summary="@string/autologin_summary"
    android:defaultValue="false"
    />
  </PreferenceCategory>
   
</PreferenceScreen>
