<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	
	<item android:title="@string/settings_label"
		android:alphabeticShortcut="@string/settings_shortcut"
		android:id="@+id/menu_settings_id"/>
    <item android:title="@string/createnewtext_label"
        android:alphabeticShortcut="@string/createnewtext_shortcut"
        android:id="@+id/menu_createnewtext_id"/>
    <item android:title="@string/createnewmail_label"
        android:alphabeticShortcut="@string/createnewmail_shortcut"
        android:id="@+id/menu_createnewmail_id"/>
    <item android:title="@string/createnewIM_label"
        android:alphabeticShortcut="@string/createnewIM_shortcut"
        android:id="@+id/menu_createnewIM_id"/>
    <item android:title="@string/seewhoison_label"
        android:alphabeticShortcut="@string/seewhoison_shortcut"
        android:id="@+id/menu_seewhoison_id"/>
</menu>