<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference
    android:key="autologin"
    android:title="@string/autologin_title"
    android:summary="@string/autologin_summary"
    android:defaultValue="false"
    />
  <CheckBoxPreference
    android:key="showfullheaders"
    android:title="@string/showfullheaders_title"
    android:summary="@string/showfullheaders_summary"
    android:defaultValue="false"
    />
  <CheckBoxPreference
    android:key="marktextread"
    android:title="@string/marktextread_title"
    android:summary="@string/marktextread_summary"
    android:defaultValue="true"
    />
  <CheckBoxPreference
    android:key="toastforasynch"
    android:title="@string/toastforasynch_title"
    android:summary="@string/toastforasynch_summary"
    android:defaultValue="true"
    />
  <PreferenceCategory
    android:title="@string/preferredlanguage_title">
  <ListPreference
    android:key="preferredlanguage"
    android:title="@string/preferredlanguage_title"
    android:summary="@string/preferredlanguage_summary"
    android:entries="@array/preferredlanguage_entries_list"
    android:entryValues="@array/preferredlanguage_values_list"
    android:dialogTitle="@string/preferredlanguage_dialog_title_prefs"
    />
  </PreferenceCategory>
</PreferenceScreen>
