<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:visibility="visible" >
    <LinearLayout
    android:id="@+id/akl_widget0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/akl_tw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" >
    </TextView>

    <TextView
        android:id="@+id/akl_widget31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name" >
    </TextView>

    <EditText
        android:id="@+id/akl_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_name_hint"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" >
    </EditText>

    <TextView
        android:id="@+id/akl_widget32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password" >
    </TextView>

    <EditText
        android:id="@+id/akl_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_password_hint"
        android:inputType="textPassword"
        android:text=""
        android:textSize="18sp" >
    </EditText>

    <Button
        android:id="@+id/akl_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login" />

    </LinearLayout>
</ScrollView>
