<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget0"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
>
<TextView
android:id="@+id/widget31"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/conf_name"
>
</TextView>
<EditText
android:id="@+id/confname"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text=""
android:hint="name"
android:inputType="text"
android:textSize="18sp"
>
</EditText>
<TextView
android:id="@+id/widget32"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/num_texts"
>
</TextView>
<EditText
android:id="@+id/num_texts"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text=""
android:hint="123"
android:inputType="number"
android:textSize="18sp"
>
</EditText>
<Button
android:id="@+id/do_endast"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/do_endast"
/>
</LinearLayout>