<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/label1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"/>
    <EditText
        android:id="@+id/recipient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="recipient"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"/>
    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="subject"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_weight="1"
        android:hint="text"
        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
        android:gravity="top" />
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">   
	    <Button
	        android:id="@+id/send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:layout_below="@id/body"
	        android:layout_alignParentRight="true"
	        android:layout_marginLeft="10dip"
	        android:text="@string/send" />
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel" />
    </LinearLayout>    
</LinearLayout>
