<?xml version="1.0" encoding="utf-8"?>
<TabHost
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:id="@+id/create_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"/>
                <EditText
                    android:id="@+id/subject"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="subject"
                    android:singleLine="true"/>
                <EditText
                    android:id="@+id/body"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:layout_weight="1"
                    android:hint="text"
                    android:inputType="textLongMessage|textAutoCorrect|textCapSentences|textMultiLine"
                    android:gravity="top"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btnSpeak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/speakBtnLabel"
                        android:src="@android:drawable/ic_btn_speak_now" />
                    <Button
                        android:id="@+id/send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/send"/>
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/cancel"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/recipients_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <ListView
                    android:id="@+id/recipients"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/add_to"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addto_button_label"/>
                    <Button
                        android:id="@+id/add_cc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addcc_button_label"/>
                    <Button
                        android:id="@+id/add_bcc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addbcc_button_label"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</TabHost>
