<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <view class="org.lindev.androkom.gui.IMConversation$IMConvListView"
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/im_new_message"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
                        android:id="@+id/btnSpeak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/speakBtnLabel"
                        android:src="@android:drawable/ic_btn_speak_now" />
        
        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="text"
            android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"/>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"/>
    </LinearLayout>
</LinearLayout>
