<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewAnimator
        android:id="@+id/flipper_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="1dp"
                android:paddingRight="16dp" >

                <TextView
                    android:id="@+id/flipper_headers1_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:text="Headers…"
                    android:textColor="@android:color/white" />

                <ViewSwitcher
                    android:id="@+id/profile1Switcher"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:id="@+id/flipper_text1_id"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:text="Loading…"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/flipper_imageView1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:contentDescription="Image without description"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon" />
                </ViewSwitcher>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="1dp"
                android:paddingRight="16dp" >

                <TextView
                    android:id="@+id/flipper_headers2_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:text="Headers…"
                    android:textColor="@android:color/white" />

                <ViewSwitcher
                    android:id="@+id/profile2Switcher"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:id="@+id/flipper_text2_id"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:text="Loading…"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/flipper_imageView2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:contentDescription="Image without description"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon" />
                </ViewSwitcher>
            </LinearLayout>
        </ScrollView>
    </ViewAnimator>

    <LinearLayout
        android:id="@+id/userbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/userbutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userbutton1" />

        <Button
            android:id="@+id/userbutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userbutton2" />

        <Button
            android:id="@+id/userbutton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userbutton3" />

        <Button
            android:id="@+id/userbutton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userbutton4" />
    </LinearLayout>

</LinearLayout>